# cc-steer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.src.md  CHANGELOG.md  LICENSE  README.md  STYLEGUIDE.md  codex-q-rKKZAk  codex-r-iAkFq0  great-docs.yml  meta  ops.json  pyproject.toml  watcher-campaign-policy.toml  watcher_recipe.json
.claude/: settings.json
.claude/fragments/.github/workflows/docs.yml/: docs-build-preamble.fragment.yml
.claude/fragments/.gitignore/: gitignore-local.fragment.gitignore
.claude/fragments/.pre-commit-config.yaml/: exclude-fixtures.fragment.yml  layout.toml
.claude/fragments/AGENTS.md/: cc-steer-development-guide.fragment.md  layout.toml  python-style.fragment.md
.claude/fragments/great-docs.yml/: great-docs-local.fragment.yml  layout.toml
.claude/hooks/: stewardship.py  style.py  testing.py
.codex-scratch/: codex-q-AOtopZ  meta
.github/workflows/: ci.yml  docs.yml  release-pypi.yml
.superset/: config.json
cc_pushback/: __init__.py  __main__.py  classify.py  claude.py  cli.py  context.py  dashboard.py  detectors.py  enrich.py  evaluate.py  export.py  formats.py  golden_triage.json  markers.py  matchers.py  migrate.py  models.py  nav.py  patterns.py  refine.py  repo.py  report.py  scan.py  serve.py  shell.py  sidecar.py  spec.py  store.py  triage.py
cc_pushback/assets/: base.css  dashboard.css  index.html
cc_pushback/assets/js/: cards.js  lineage.js  main.js
cc_pushback/llm/: __init__.py  backends.py  prompt.py  runner.py
cc_pushback/llm/prompts/: classify.md
cc_pushback/sources/: __init__.py  base.py  filterspec.py  github.py  interrupts.py  issues.py  plan_reviews.py  transcripts.py
cc_steer/: __init__.py  __main__.py  capture.py  claude.py  cli.py  context_rebuild.py  dashboard.py  decisions.py  detectors.py  enrich.py  evaluate.py  evidence.py  exemplars.py  export.py  formats.py  golden_triage.json  hooks.py  imports.py  instrument.py  journal.py  launchd.py  livehook.py  models.py  negatives.py  pipeline.py  predict.py  profile.py  refine.py  registry.py  rendering.py  report.py  scan.py  serve.py  sidecar.py  spec.py  stats.py  store.py  triage.py
cc_steer/assets/: __init__.py  base.css  dashboard.css  index.html  watcher_recipe.json
cc_steer/assets/js/: cards.js  detail.js  dom.js  filters.js  lineage.js  state.js  stats.js
cc_steer/labeling/: __init__.py  __main__.py  blocks.py  ingest.py  models.py  queue.py
cc_steer/retrain/: __init__.py  audit.py  data.py  encoder.py  evalset.py  golden.py  judged.py  lexical.py  manyshot.py  mine_deep.py  promotion.py  refit.py  sentinel.py  sweep.py  tinker.py  watcher.py  watcher_hosted.py
cc_steer/watcher/: __init__.py  cascade.py  daemon.py  delivery.py  drafter_http.py  drafter_mlx.py  gate.py  live.py  outcomes.py  reactions.py  shadow.py  types.py  wsr.py
docs/scripts/: demo.sh
experiments/: watcher-base-sweep-qwen3-8b.toml  watcher-base-sweep-qwen3.5-4b.toml  watcher-base-sweep-qwen3.5-9b.toml  watcher-base-sweep.toml  watcher-campaign-policy.toml
tests/: builders.py  conftest.py  fixture_prompt.py  test_capture.py  test_cascade.py  test_classify.py  test_claude.py  test_cli.py  test_cli_scan.py  test_cli_sync.py  test_cli_watch.py  test_context.py  test_context_rebuild.py  test_daemon.py  test_dashboard.py  test_decisions.py  test_delivery.py  test_detectors.py  test_drafter_http.py  test_drafter_mlx.py  test_enrich.py  test_evaluate.py  test_evidence.py  test_exemplars.py  test_exemplars_cli.py  test_export.py  test_filter_composition.py  test_formats.py  test_gate.py  test_hooks.py  test_imports.py  test_instrument.py  test_journal.py  test_labeling.py  test_launchd.py  test_live.py  test_livehook.py  test_llm.py  test_matchers.py  test_migrate.py  (+45 more)
tests/fixtures/: build_prompt_2_0.txt  build_prompt_pre0c.txt  delong_e27.npz  delong_e28.npz
