[project]
name = "cc-pushback"
# Inert sentinel — the real version is set from the release tag (uv version --frozen); never read this value.
version = "0.0.0"
description = "Your best training data is rotting in ~/.claude."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.4",
    "cc-transcript>=8,<9",
    "click>=8",
    "datasets>=3.2",
    "fastapi>=0.115",
    "huggingface-hub>=0.27",
    "pydantic>=2",
    "spawnllm>=0.5.1,<0.6",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ty>=0.0.44",
    "ruff>=0.8",
    "httpx>=0.27",
]

[project.scripts]
cc-pushback = "cc_pushback.cli:main"

[project.urls]
Homepage = "https://github.com/yasyf/cc-pushback"
Documentation = "https://yasyf.github.io/cc-pushback/"
Repository = "https://github.com/yasyf/cc-pushback"
Issues = "https://github.com/yasyf/cc-pushback/issues"
Changelog = "https://github.com/yasyf/cc-pushback/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

# TEMPORARY: path override for unreleased cc-transcript v8 — drop before release.
[tool.uv.sources]
cc-transcript = { path = "../cc-transcript", editable = true }

[tool.uv.build-backend]
module-name = "cc_pushback"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
markers = [
    "unit: Pure unit tests",
    "integration: Integration tests",
]

# ty (Astral) is the default type checker — run `uv run ty check cc_pushback`.
# It is fast, understands modern syntax, and avoids the strict-pyright false
# positives on pydantic/attrs-style dynamic defaults and PK-type overrides.
[tool.ty.rules]
# Keep cross-checker `# type: ignore` / `# pyright: ignore` comments from tripping ty.
unused-type-ignore-comment = "ignore"
unresolved-import = "ignore"

# pyright is kept as a secondary checker (editors / `uvx pyright`). Basic mode plus
# a few disables covers the noise; ty is the gate that runs in CI.
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["cc_pushback"]
venvPath = "."
venv = ".venv"
reportImplicitOverride = "none"
reportIncompatibleVariableOverride = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
reportPrivateImportUsage = "none"
reportUnusedCallResult = "none"

[tool.ruff]
line-length = 120
target-version = "py313"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
docs = [
    "great-docs>=0.13,<0.14",
]
